--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@
     justify-content: center;
     align-items: center;
 }
+
+.loaded_hiding .preloader {
+    transition: 0.3s opacity;
+    opacity: 0;
+}
+
+  
+.loaded .preloader {
+    display: none;
+}
