--- a/style.css
+++ b/style.css
@@ -13,3 +13,33 @@
 .loaded .preloader {
     display: none;
 }
+
+.preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    background: #00BBC7;
+    z-index: 1001;
+    text-align: center;
+}
+
+.preloader__image {
+    position: relative;
+    top: 50%;
+    /* left: 50%; */
+    width:135px;
+    height: auto;
+    /* height: 170px; */
+    /* margin-top: -35px;
+    margin-left: -35px; */
+    animation: preloader-rotate 2s infinite linear;
+  }
+  
+  @keyframes preloader-rotate {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
